@@ -28,8 +28,9 @@ RUN cd om-webserver \
 FROM openeuler/openeuler:22.03
 RUN groupadd -g 1001 om-webserver \
     && useradd -u 1001 -g om-webserver -s /bin/bash -m om-webserver \
-    && yum install -y fontconfig
+    && yum install -y fontconfig glibc-all-langpacks
 
+ENV LANG=zh_CN.UTF-8
 ENV WORKSPACE=/home/om-webserver
 ENV SOURCE=${WORKSPACE}/file/source
 ENV TARGET=${WORKSPACE}/file/target
@@ -48,4 +49,7 @@ EXPOSE 8080
 
 USER om-webserver
 
-CMD java -jar ${WORKSPACE}/target/om-webserver.jar --spring.config.location=${APPLICATION_PATH}
+CMD java --add-opens java.base/java.util=ALL-UNNAMED \
+         --add-opens java.base/java.lang=ALL-UNNAMED \
+         --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+         -jar ${WORKSPACE}/target/om-webserver.jar --spring.config.location=${APPLICATION_PATH}
